# urlscanner

./: .gitignore  README.md  pyproject.toml
src/urlscanner/: api.py  checker.py  cli.py  models.py
